Version 2.2.046
    Added Spears combat skill
    Added permissions related to Spears
    Added /spears skill command
    Fixed bug where converting from SQL to FlatFile would not copy data for tridents, crossbows, maces, or spears
    (Codebase) Added dockerized unit tests for SQL databases (See notes)
    (Codebase) Large refactor to both SQLDatabaseManager and FlatFileDatabaseManager
    (Codebase) Database related errors are now more descriptive and have had their logging improved

    NOTES:
    If you compile mcMMO you will likely run into errors during unit tests for SQL databases, this is because they now rely on docker being present on the system to load up test containers.
    New SQL database unit tests have been added which leverage test containers to test against real installs of MySQL/MariaDB, which require Docker (or an equivalent) to run.
    If you'd rather not install docker simply just add -DskipTests to your maven instructions when compiling, this doesn't change anything about mcMMO it just skips running through the unit tests during the build.

Version 2.2.045
    Green Thumb now replants some crops it was failing to replant before (see notes)
    Green Thumb now replants harvested plants faster
    Fixed an error that could happen when replanting crops with Green Thumb
    Fixed a bug where salvage.vanilla.yml was readding deleted entries on server restart
    Fixed a bug where repair.vanilla.yml was readding deleted entries on server restart
    Added missing permission node 'mcmmo.ability.repair.copperrepair'
    Added missing permission node 'mcmmo.ability.salvage.coppersalvage'

    NOTES:
    The delay from a plant being replanted from Green Thumb is intentional, and while looking into bugs it seemed maybe a tad slow, so I sped it up a bit.
    Green Thumb still won't replant some stuff such as sugar canes, cacti, those are handled a bit differently, but I could add support for it in an upcoming patch if requested.

Version 2.2.044